--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
+<a class="back-to-portfolio"
+   href="https://ernestas108.github.io/portfolio/"
+   aria-label="Grįžti į portfolio">← Grįžti į portfolio</a>
 <body>
 
 <!-- Viršutinis pranešimas -->
