--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Servisas</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 <a class="back-to-portfolio"
-   href="https://ernestas108.github.io/portfolio/"
-   aria-label="Grįžti į portfolio">← Grįžti į portfolio</a>
+   href="https://Smart Pages"
+   aria-label="Grįžti į pagrindinį">← Grįžti į pagrindinį</a>
 <body>
 
 <!-- Viršutinis pranešimas -->
@@ -101,8 +101,8 @@
         <div class="contact-card">
             <h2>Kontaktai</h2>
             <p><strong>Telefonas:</strong> <a href="tel:+37060457322">+370 604 57322</a></p>
-            <p><strong>El. paštas:</strong> <a href="ernestasnc@gmail.com">ernestasnc@gmail.com</a></p>
-            <p><strong>Adresas:</strong> Pas Ernestą</p>
+            <p><strong>El. paštas:</strong> <a href="info@smartpages.lt">info@smartpages.lt</a></p>
+            <p><strong>Adresas:</strong> Pas Meistrus</p>
             <div class="contact-cta">
                 <a class="btn" href="mailto:info@autoservisas.lt?subject=Užklausa dėl remonto&body=Sveiki, noriu užsiregistruoti...">Užklausa el. paštu</a>
                 <a class="btn-outline" target="_blank" rel="noopener" href="https://maps.google.com/?q=Vilniaus+g.+10+Vilnius">Rasti žemėlapyje</a>
