--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
 </head>
 <a class="back-to-portfolio"
-   href="https://Smart Pages"
+   href="https://ernestas108.github.io/portfolio/"
    aria-label="Grįžti į pagrindinį">← Grįžti į pagrindinį</a>
 <body>
 
